feat: add tree structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Árvore de Tópicos MQTT</title>
+<title>Management Broker Mqtt</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <div id="tree">
+    <ul></ul>
     <!-- A árvore MQTT será gerada aqui pelo JavaScript -->
   </div>
 
+  <div id="sidebar">
+    <h2 id="sidebarTitle">Detalhes do Item</h2>
+    <div id="sidebarContent">
+      <!-- O conteúdo será preenchido dinamicamente pelo JavaScript -->
+    </div>
+  </div>
+  
 <script src="script.js"></script>
 
 </body>
